--- a/popup.html
+++ b/popup.html
@@ -85,6 +85,6 @@
         Open a Google Maps place page and click 'Analyze Current Page'.
     </div>
 
-    <script src="popup.js"></script>
+    <script src="confInt.js"></script>
 </body>
 </html>
